Fix layout on small screens

--- a/web/main.css
+++ b/web/main.css
@@ -17,7 +17,7 @@ body {
 .data-container {
   float: left;
   padding: 12px;
-  width: 590px;
+  width: 570px;
 }
 
 .review {
